deploy/environments/local/grafana-route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: o11y
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: propertea-gateway
      namespace: kube-system
  hostnames:
    - grafana.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: grafana
          port: 80
          weight: 1
